# agi-demos

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  Makefile  README.md  docker-compose.ray.override.yml  package-lock.json  package.json  pyproject.toml  rewrite_agentService.py  split_agent.js  split_preview.py  test_volcengine_connection.py
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.memstack/plugins/: mutation_ledger.json  state.json
.memstack/plugins/feishu/: README.md  __init__.py  adapter.py  bitable.py  cardkit_streaming.py  cards.py  client.py  docx.py  drive.py  hitl_cards.py  media.py  media_downloader.py  memstack.plugin.json  plugin.py  rich_cards.py  webhook.py  wiki.py
.memstack/skills/evomap/: env.sh
.memstack/skills/showcase-greeting/: env.sh
.sisyphus/plans/: multi-agent-architecture.md
8800f9fc-484e-4bb5-8151-8e1a213dd0b2/.memstack/: workspace-manifest.json
9e601d07-21ff-4546-97bd-d66a1ee81a59/.memstack/: workspace-manifest.json
alembic/versions/: 0078f966ce4b_make_llm_model_nullable_update_provider_.py  9e4339213e4d_widen_correlation_id_from_varchar32_to_.py  a3c7e5f12b8d_add_mcp_composite_indexes.py  b2c3d4e5f6a7_p2b2_conversation_multi_agent_cols.py  d5e6f7a8b9c0_add_volcengine_split_provider_types.py  f9c1d2e3a4b5_add_coding_provider_types.py  g2d1e2f3a4b5_conversations_workspace_link.py  g5f2a3b4c5d6_workspace_default_blocking_categories.py  i1a2b3c4d5e6_add_conversation_fork_merge_fields.py  j2b3c4d5e6f7_add_message_bindings_table.py  m5e6f7a8b9c0_add_workspace_task_session_attempts.py
docs/: CLI.md  VOLCENGINE_PROVIDER_SUPPORT.md
docs/architecture/: FEISHU_PLUGIN_MIGRATION_PLAN.md  PLUGIN_TOOL_PIPELINE_FIX.md  SANDBOX_FIRST_ARCHITECTURE.md
docs/plans/: SUBAGENT_ENHANCEMENT_PLAN.md  SUBAGENT_UI_IMPROVEMENT_PLAN.md
examples/copilotkit-a2ui/backend/: app.py  graph.py
research/volcengine/: agent_pipeline_blueprint.md  rtc_sidecar_architecture.md  tts_v3_client.py
sandbox-mcp-server/: README.md
sandbox-mcp-server/src/server/: desktop_manager.py
sandbox-mcp-server/src/tools/: artifact_tools.py  ast_tools.py  desktop_tools.py  edit_tools.py  file_tools.py  index_tools.py  registry.py  test_tools.py
sandbox-mcp-server/tests/: test_desktop_manager.py
sandbox-mcp-server/tests/tools/: test_ast_tools.py  test_desktop_tools.py  test_edit_tools.py  test_file_tools.py  test_index_tools.py  test_list_tools.py  test_patch_tools.py  test_test_tools.py
scripts/: backfill_task_event_payloads.py  check-route-naming.mjs  check_refresh_select_execute.py  generate_models_snapshot.py  migrate_workspaces.py  worktree-env.sh
sdk/memstack_cli/memstack_cli/: cli.py  client.py
sdk/memstack_cli/tests/: conftest.py  test_auth.py  test_client.py  test_commands.py
shared/fixtures/: a2ui-contract-fixtures.json  canvas-native-block-fixtures.json
src/: agent_actor_worker.py  channels_enhanced_example.py  channels_example.py
src/application/schemas/: audit_schemas.py  auth.py  workspace_agent_autonomy.py
src/application/services/: agent_service.py  artifact_service.py  attachment_service.py  audit_query_service.py  llm_provider_manager.py  mcp_app_service.py  mcp_runtime_service.py  memory_index_service.py  memory_service.py  project_sandbox_lifecycle_service.py  provider_resolution_service.py  provider_service.py  sandbox_health_service.py  sandbox_idle_reaper.py  sandbox_mcp_server_manager.py  sandbox_profile.py  sandbox_token_service.py  sandbox_tool_registry.py  sandbox_url_service.py  session_comm_service.py  skill_revision.py  task_service.py  unified_sandbox_service.py  workflow_learner.py  workspace_agent_autonomy.py  workspace_autonomy_idle_waker.py  workspace_goal_sensing_service.py  workspace_mention_router.py  workspace_message_service.py  workspace_sync_service.py  workspace_task_command_service.py  workspace_task_event_publisher.py  workspace_task_service.py  workspace_task_session_attempt_service.py
src/configuration/: config.py  di_container.py  factories.py
src/configuration/containers/: agent_container.py  infra_container.py  project_container.py  sandbox_container.py
src/domain/events/: agent_events.py  types.py
src/domain/exceptions/: mcp.py
src/domain/llm_providers/: llm_types.py  models.py  repositories.py
src/infrastructure/audit/: audit_log_service.py
src/infrastructure/graph/: distributed_transaction_coordinator.py  native_graph_adapter.py
src/infrastructure/llm/: category_router.py  failover_chain.py  initializer.py  model_catalog.py  models_dev_fetcher.py  models_snapshot.json  provider_config.py  provider_env_defaults.py  provider_factory.py  reasoning_config.py  validation.py
src/infrastructure/mcp/: __init__.py  config.py  health_monitor.py  pipeline_executor.py  resource_cache.py  sandbox_tool_adapter.py  tool_registry.py  validation.py
src/infrastructure/memory/: chunk_search.py  chunk_sync.py  chunker.py
src/infrastructure/persistence/: llm_providers_models.py  llm_providers_repository.py
src/tests/: conftest.py
src/tests/integration/: test_memory_edit_endpoints.py  test_memory_workflow_new.py
src/tests/unit/: test_command_system.py  test_create_memory_use_case.py  test_env_var_tools.py  test_hitl_tool_requests.py  test_llm_module.py  test_mcp_app.py  test_multi_subagent_orchestration.py  test_plugin_tool_adapter.py  test_provider_filtering.py  test_react_agent_integration.py  test_register_mcp_server_tool.py  test_sandbox_idle_reaper.py  test_skill_progressive_loading.py  test_system_prompt_manager.py  test_tool_execution_router.py  test_workspace_goal_runtime_gate.py  test_workspace_manifest.py  test_workspace_sync_service.py
web/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/e2e/: multi-agent-flow.spec.ts
web/public/: audio-processor.js
web/src/: ARCHITECTURE.md  App.tsx  index.css  main.tsx
web/src/config/: navigation.ts
web/src/constants/: providers.ts
web/src/core/: adapters.ts  index.ts
web/src/hooks/: useActiveModelCapabilities.ts  useAudioQueue.ts  useBlackboardActions.ts  useBreadcrumbs.ts  (+7 more)
(+916 files in other folders)
