[project]
name = "memstack"
version = "0.1.0"
description = "企业级 AI 记忆云平台"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cluade code" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "httpx[socks]>=0.25.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "dashscope>=1.20.0",
    "greenlet>=3.3.0",
    "openai>=2.8.0",
    "aiosqlite>=0.22.1",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.0",
    # ZhipuAI (Z.AI) official SDK
    "zai-sdk>=0.2.0",
    # LiteLLM for multi-provider LLM support (1.81+ for zai provider)
    "litellm>=1.81.0",
    # Web search and scraping tools
    "tavily-python>=0.5.0",
    "playwright>=1.45.0",
    "orjson>=3.11.5",
    "slowapi>=0.1.9",
    "networkx>=3.6.1",
    "docker>=7.1.0",
    "aioboto3>=15.5.0",
    # MCP (Model Context Protocol) for tool integration
    "mcp>=1.0.0",
    # Ray for Actor-based agent runtime
    "ray>=2.9.0",
    "lark-oapi",
    "neo4j>=6.0.3",
    # APScheduler 4.x for distributed scheduled tasks
    "apscheduler>=4.0.0a1",
    "python-socks[asyncio]>=2.4.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pyright>=1.1.400",
    "faker>=20.0.0",
]

neo4j = ["neo4j>=5.14.0"]

evaluation = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".memstack", ".claude", "alembic", "examples", "sandbox-mcp-server", "scripts", "sdk", "conftest.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
    # Type annotation rules
    "ANN001", # function parameter type annotation missing
    "ANN002", # *args type annotation missing
    "ANN003", # **kwargs type annotation missing
    "ANN201", # public function return type missing
    "ANN202", # private function return type missing
    "ANN401", # disallow Any in function signatures
    # Code quality
    "C901",   # cyclomatic complexity (threshold configurable)
    "PLR091", # Pylint refactoring rules
    "S",      # flake8-bandit (security rules)
    "TCH",    # flake8-type-checking (optimize type imports)
    "PT",     # flake8-pytest-style
    "PIE",    # flake8-pie (misc best practices)
]
ignore = [
    # Formatting (handled by formatter)
    "E501",
    # Naming style (project conventions)
    "N802", "N805", "N806", "N815", "N818",
    # Micro-optimizations (readability first)
    "C401", "C416", "SIM102", "SIM108", "SIM110", "SIM116", "SIM118",
    # Chinese characters (business requirement)
    "RUF001", "RUF002", "RUF003",
    # FastAPI dependency injection
    "B008",
    # Security rules (allowed)
    "S101",   # assert used (acceptable in tests and validation)
    "S104",   # binding to 0.0.0.0 (intentional for dev server)
    "S105",   # possible hardcoded password (false positives on constants)
    "S106",   # possible hardcoded password argument (false positives on defaults)
    "S108",   # hardcoded temp directory
    "S110",   # try-except-pass (too prevalent, fix incrementally)
    "S112",   # try-except-continue (fix incrementally)
    "S311",   # pseudo-random generators (used for non-crypto purposes)
    "S324",   # insecure hash (md5 used for content hashing, not crypto)
    "S501",   # httpx verify=False (development/testing)
    "S603",   # subprocess call - process untrusted input (too noisy for agent tools)
    "S607",   # partial executable path (too noisy)
    "S608",   # SQL injection via string construction (review in Wave 2)
    "PIE796", # duplicate enum value (intentional aliasing)
    "PIE810", # unnecessary pass in class body (conflicts with abstract patterns)
    "PT028",  # test function parameter with default (false positive on Depends)
]

[tool.ruff.lint.per-file-ignores]
# Delayed import exemptions (logging config etc.)
"src/infrastructure/adapters/primary/web/main.py" = ["E402"]
"src/infrastructure/adapters/secondary/ray/__init__.py" = ["E402"]
"src/infrastructure/llm/litellm/litellm_client.py" = ["E402", "ANN401"]
"src/tests/unit/infrastructure/llm/conftest.py" = ["E402"]

# Test files relaxed (assert allowed, annotations optional, broad exceptions OK)
"src/tests/**" = [
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401",
    "N802", "N803", "E741", "B017", "B023", "RUF043",
    "S101",   # assert is expected in tests
    "S105", "S106", "S107", "S108",  # hardcoded passwords/paths in test fixtures
    "PT",     # pytest style rules relaxed for existing tests
]

# Alembic migration files
"src/alembic/**" = ["ANN", "N999"]

# Legacy modules (progressively tighten)
"src/memstack_agent/**" = ["ANN", "UP007", "UP045", "S", "PIE", "TCH"]

# DDD marker base classes (ABC without abstract methods is intentional)
"src/domain/shared_kernel.py" = ["B024"]

# High cyclomatic complexity files (progressively refactor)
"src/application/services/agent_service.py" = ["C901", "S110", "PIE790", "ANN401"]
"src/infrastructure/agent/core/react_agent.py" = ["C901", "ANN401"]
"src/infrastructure/agent/processor/processor.py" = ["C901", "ANN401"]

# Infrastructure modules that use subprocess (agent tools, MCP)
"src/infrastructure/agent/tools/*" = ["S", "ANN401"]
"src/infrastructure/mcp/*" = ["S603", "S607"]

# Sandbox plugin wrappers (closure-based, requires **kwargs: Any)
"src/infrastructure/agent/plugins/sandbox_deps/sandbox_plugin_tool_wrapper.py" = ["ANN401"]


# Files with intentional try-except-pass or TCH import optimization TODOs
"src/application/services/agent/conversation_manager.py" = ["TC005"]
"src/application/services/agent/runtime_bootstrapper.py" = ["S110", "TC001"]
"src/application/services/artifact_service.py" = ["S108"]
"src/application/services/attachment_service.py" = ["S324"]
"src/application/services/channels/channel_message_router.py" = ["S110", "ANN401"]
"src/application/services/channels/media_import_service.py" = ["TC002", "PIE790"]
"src/application/services/mcp_runtime_service.py" = ["TC001", "TC002", "TC003", "S110"]
"src/application/services/project_sandbox_lifecycle_service.py" = ["S108", "ANN401"]
"src/application/services/sandbox_health_service.py" = ["S110"]
"src/application/services/sandbox_mcp_server_manager.py" = ["TC001", "ANN401"]
"src/application/services/sandbox_orchestrator.py" = ["TC001"]
"src/application/services/skill_reverse_sync.py" = ["TC001", "S110", "ANN401"]
"src/application/services/unified_sandbox_service.py" = ["S108"]
"src/application/use_cases/agent/execute_step.py" = ["TC001", "ANN401"]
"src/application/use_cases/memory/delete_memory.py" = ["S608"]
"src/infrastructure/agent/tools/memory_tools.py" = ["TC003"]
"src/infrastructure/agent/tools/mutation_ledger.py" = ["TC003"]
"src/infrastructure/agent/tools/skill_loader.py" = ["TC001"]
"src/infrastructure/agent/tools/tool_mutation_guard.py" = ["TC003"]
"src/infrastructure/agent/tools/web_scrape.py" = ["PIE810"]
"src/infrastructure/mcp/clients/subprocess_client.py" = ["S110"]

# Schema router: FastAPI endpoints return ORM models via response_model, Any return type is standard pattern
"src/infrastructure/adapters/primary/web/routers/schema.py" = ["ANN401"]
"src/infrastructure/mcp/sandbox_tool_adapter.py" = ["TC003", "ANN401"]
"src/infrastructure/mcp/transport/base.py" = ["PIE790"]
"src/infrastructure/mcp/transport/http.py" = ["PIE790"]

# Application services and use cases
"src/application/services/channels/event_bridge.py" = ["ANN401"]
"src/application/services/llm_provider_manager.py" = ["ANN401"]
"src/application/use_cases/agent/compose_tools.py" = ["ANN401"]

# Example file
"src/channels_enhanced_example.py" = ["ANN401"]

# Configuration containers
"src/configuration/containers/agent_container.py" = ["ANN401"]
"src/configuration/di_container.py" = ["ANN401"]

# Domain - events and exceptions
"src/domain/events/agent_events.py" = ["ANN401"]
"src/domain/events/envelope.py" = ["ANN401"]
"src/domain/events/serialization.py" = ["ANN401"]
"src/domain/exceptions/repository_exceptions.py" = ["ANN401"]
"src/domain/llm_providers/llm_types.py" = ["ANN401"]
"src/domain/model/agent/hitl/hitl_types.py" = ["ANN401"]
"src/domain/model/sandbox/retry_policy.py" = ["ANN401"]
"src/domain/ports/services/hitl_message_bus_port.py" = ["ANN401"]
"src/domain/ports/services/hitl_service_port.py" = ["ANN401"]

# Infrastructure - primary web adapters
"src/infrastructure/adapters/primary/web/metrics.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/agent/messages.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/channels.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/maintenance.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/mcp/apps.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/memories.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/project_sandbox.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/projects.py" = ["ANN401"]

# Infrastructure - secondary adapters (common)
"src/infrastructure/adapters/secondary/common/query_monitor.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/common/retry.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/common/transaction_manager.py" = ["ANN401"]

# Infrastructure - secondary adapters (messaging, persistence, sandbox)
"src/infrastructure/adapters/secondary/messaging/redis_agent_event_bus.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/json_types.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_hitl_request_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_subagent_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_tenant_agent_config_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_tenant_skill_config_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_tool_environment_variable_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/sandbox/mcp_sandbox_adapter.py" = ["ANN401"]

# Infrastructure - agent actor and artifact
"src/infrastructure/agent/actor/hitl_router_actor.py" = ["ANN401"]
"src/infrastructure/agent/artifact/extractor.py" = ["ANN401"]

# Infrastructure - agent core config and errors
"src/infrastructure/agent/config.py" = ["ANN401"]
"src/infrastructure/agent/errors.py" = ["ANN401"]

# Infrastructure - agent context
"src/infrastructure/agent/context/compression_engine.py" = ["ANN401"]
"src/infrastructure/agent/context/overflow_recovery.py" = ["ANN401"]

# Infrastructure - agent cost and LLM
"src/infrastructure/agent/cost/tracker.py" = ["ANN401"]
"src/infrastructure/agent/llm/token_sampler.py" = ["ANN401"]

# Infrastructure - agent HITL
"src/infrastructure/agent/hitl/coordinator.py" = ["ANN401"]
"src/infrastructure/agent/hitl/ray_hitl_handler.py" = ["ANN401"]

# Infrastructure - agent MCP
"src/infrastructure/agent/mcp/client.py" = ["ANN401"]
"src/infrastructure/agent/mcp/registry.py" = ["ANN401"]

# Infrastructure - agent plugins
"src/infrastructure/agent/plugins/discovery.py" = ["ANN401"]
"src/infrastructure/agent/plugins/manager.py" = ["ANN401"]
"src/infrastructure/agent/plugins/registry.py" = ["ANN401"]
"src/infrastructure/agent/plugins/runtime_api.py" = ["ANN401"]
"src/infrastructure/agent/plugins/sdk.py" = ["ANN401"]
"src/infrastructure/agent/plugins/selection_pipeline.py" = ["ANN401"]
"src/infrastructure/agent/plugins/state_store.py" = ["ANN401"]

# Infrastructure - agent pool
"src/infrastructure/agent/pool/circuit_breaker/breaker.py" = ["ANN401"]
"src/infrastructure/agent/pool/container/server.py" = ["ANN401"]
"src/infrastructure/agent/pool/ha/auto_scaling.py" = ["ANN401"]
"src/infrastructure/agent/pool/ha/failure_recovery.py" = ["ANN401"]
"src/infrastructure/agent/pool/orchestrator.py" = ["ANN401"]
"src/infrastructure/agent/pool/api/router.py" = ["ANN401"]

# Infrastructure - agent prompts
"src/infrastructure/agent/prompts/manager.py" = ["ANN401"]

# Infrastructure - agent state
"src/infrastructure/agent/state/agent_session_pool.py" = ["ANN401"]
"src/infrastructure/agent/state/agent_worker_state.py" = ["ANN401"]

# Infrastructure - agent subagent
"src/infrastructure/agent/subagent/process.py" = ["ANN401"]
"src/infrastructure/agent/subagent/run_registry.py" = ["ANN401"]
"src/infrastructure/agent/subagent/run_repository.py" = ["ANN401"]

# Infrastructure - channels, graph, LLM
"src/infrastructure/channels/connection_manager.py" = ["ANN401"]
"src/infrastructure/graph/distributed_transaction_coordinator.py" = ["ANN401"]
"src/infrastructure/graph/extraction/reflexion.py" = ["ANN401"]
"src/infrastructure/graph/extraction/entity_extractor.py" = ["ANN401"]
"src/infrastructure/graph/extraction/relationship_extractor.py" = ["ANN401"]
"src/infrastructure/graph/neo4j_client.py" = ["ANN401"]
"src/infrastructure/llm/cache.py" = ["ANN401"]
"src/infrastructure/llm/litellm/litellm_embedder.py" = ["ANN401"]
"src/infrastructure/llm/litellm/litellm_reranker.py" = ["ANN401"]
"src/infrastructure/llm/structured_logger.py" = ["ANN401"]
"src/infrastructure/llm/validation.py" = ["ANN401"]

# Infrastructure - MCP and queue
"src/infrastructure/mcp/health_monitor.py" = ["ANN401"]
"src/infrastructure/mcp/clients/http_client.py" = ["ANN401"]
"src/infrastructure/queue/request_queue.py" = ["ANN401"]

# Infrastructure - skill and telemetry
"src/infrastructure/skill/validator.py" = ["ANN401"]
"src/infrastructure/telemetry/tracing.py" = ["ANN401"]

# Application services (additional)
"src/application/services/agent/tool_discovery.py" = ["ANN401"]
"src/application/services/sandbox_status_sync_service.py" = ["ANN401"]

# Configuration containers (additional)
"src/configuration/containers/infra_container.py" = ["ANN401"]
"src/configuration/containers/sandbox_container.py" = ["ANN401"]

# Domain - LLM and models (additional exceptions)
"src/domain/llm_providers/exceptions.py" = ["ANN401"]
"src/domain/model/mcp/app.py" = ["ANN401"]
"src/domain/model/sandbox/exceptions.py" = ["ANN401"]

# Domain - ports (additional)
"src/domain/ports/agent/agent_tool_port.py" = ["ANN401"]
"src/domain/ports/repositories/agent_task_repository.py" = ["ANN401"]
"src/domain/ports/tool_port.py" = ["ANN401"]

# Infrastructure - primary web (additional)
"src/infrastructure/adapters/primary/web/dependencies/authorization.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/agent/events.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/ai_tools.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/background_tasks.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/data_export.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/episodes.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/graph.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/mcp/servers.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/mcp/utils.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/recall.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/tasks.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/routers/terminal.py" = ["ANN401"]
"src/infrastructure/adapters/primary/web/websocket/message_context.py" = ["ANN401"]

# Infrastructure - secondary adapters (additional)
"src/infrastructure/adapters/secondary/background_tasks.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/cache/cached_workflow_pattern_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/channels/feishu/adapter.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/common/base_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/common/cached_repository_mixin.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/common/query_builder.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/messaging/redis_hitl_message_bus.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_agent_task_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_message_execution_status_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_project_sandbox_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/sql_subagent_template_repository.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/persistence/type_decorators.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/ray/client.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/sandbox/health_monitor.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/sandbox/reconciler.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/storage/s3_storage_adapter.py" = ["ANN401"]
"src/infrastructure/adapters/secondary/schema/dynamic_schema.py" = ["ANN401"]

# Infrastructure - agent core and actor (additional)
"src/infrastructure/agent/actor/actor_manager.py" = ["ANN401"]
"src/infrastructure/agent/core/llm_stream.py" = ["ANN401"]
"src/infrastructure/agent/core/project_react_agent.py" = ["ANN401"]
"src/infrastructure/agent/core/tool_converter.py" = ["ANN401"]
"src/infrastructure/agent/core/tool_selector.py" = ["ANN401"]
"src/infrastructure/agent/core/subagent_runner.py" = ["ANN401"]
"src/infrastructure/agent/core/subagent_tools.py" = ["ANN401"]

# Infrastructure - agent doom loop and HITL (additional)
"src/infrastructure/agent/doom_loop/detector.py" = ["ANN401"]
"src/infrastructure/agent/hitl/hitl_strategies.py" = ["ANN401"]

# Infrastructure - agent LLM and MCP (additional)
"src/infrastructure/agent/llm/invoker.py" = ["ANN401"]
"src/infrastructure/agent/mcp/adapter.py" = ["ANN401"]
"src/infrastructure/agent/mcp/cancel.py" = ["ANN401"]

# Infrastructure - agent memory
"src/infrastructure/agent/memory/capture.py" = ["ANN401"]
"src/infrastructure/agent/memory/flush.py" = ["ANN401"]
"src/infrastructure/agent/memory/recall.py" = ["ANN401"]

# Infrastructure - agent output formatters (additional)
"src/infrastructure/agent/output/__init__.py" = ["ANN401"]
"src/infrastructure/agent/output/code_formatter.py" = ["ANN401"]
"src/infrastructure/agent/output/markdown_formatter.py" = ["ANN401"]
"src/infrastructure/agent/output/table_formatter.py" = ["ANN401"]

# Infrastructure - agent plugins and processor (additional)
"src/infrastructure/agent/plugins/manifest.py" = ["ANN401"]
"src/infrastructure/agent/processor/hitl_tool_handler.py" = ["ANN401"]

# Infrastructure - agent routing
"src/infrastructure/agent/routing/execution_router.py" = ["ANN401"]
"src/infrastructure/agent/routing/hybrid_router.py" = ["ANN401"]
"src/infrastructure/agent/routing/subagent_orchestrator.py" = ["ANN401"]

# Infrastructure - agent subagent (additional)
"src/infrastructure/agent/subagent/memory_accessor.py" = ["ANN401"]
"src/infrastructure/agent/subagent/template_registry.py" = ["ANN401"]

# Infrastructure - cache, LLM, MCP, telemetry
"src/infrastructure/cache/llm_cache.py" = ["ANN401"]
"src/infrastructure/llm/litellm/unified_llm_client.py" = ["ANN401"]
"src/infrastructure/llm/registry.py" = ["ANN401"]
"src/infrastructure/mcp/resource_resolver.py" = ["ANN401"]
"src/infrastructure/mcp/tools/factory.py" = ["ANN401"]
"src/infrastructure/telemetry/config.py" = ["ANN401"]
"src/infrastructure/telemetry/instrumentation.py" = ["ANN401"]

# Test fixtures and components (already covered by src/tests/** but adding explicitly)
"src/tests/unit/fixtures/memory_fixtures.py" = ["ANN401"]
"src/tests/unit/fixtures/project_fixtures.py" = ["ANN401"]
"src/tests/unit/fixtures/user_fixtures.py" = ["ANN401"]
"src/tests/unit/infrastructure/agent/core/test_execution_path_integration.py" = ["ANN401"]
"src/tests/unit/infrastructure/agent/core/test_react_agent_components.py" = ["ANN401"]
"src/tests/unit/infrastructure/agent/routing/test_execution_router.py" = ["ANN401"]
"src/tests/unit/infrastructure/agent/tools/test_base.py" = ["ANN401"]
"src/tests/unit/infrastructure/agent/tools/test_tool_registry.py" = ["ANN401"]

# Security false positives: config defaults use 0.0.0.0 and hardcoded values intentionally
"src/configuration/config.py" = ["S104"]

# TCH (type-checking imports) - suppress globally for now, enable file-by-file in Wave 2
"src/**" = ["TCH"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12  # Default 10, relaxed slightly

[tool.ruff.lint.pylint]
max-args = 12  # Default 5, raised for DI constructors and FastAPI endpoints

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

# Excluded directories
exclude = [
    "src/tests/",
    "src/alembic/",
    "src/memstack_agent/",  # Legacy code, migrate progressively
]

# Per-module overrides for untyped third-party libraries
# (replaces global ignore_missing_imports = true)

# Progressive enablement - fix first, then enable
# disallow_untyped_calls = true   # Phase 2: 2362 errors, fix incrementally
# disallow_incomplete_defs = true  # Phase 2: fix incrementally
# check_untyped_defs = true        # Phase 2: fix incrementally

[[tool.mypy.overrides]]
module = "src.infrastructure.llm.litellm.*"
ignore_errors = true  # 25 remaining errors (no-any-return, arg-type, attr-defined, etc.)

[[tool.mypy.overrides]]
module = "src.infrastructure.adapters.secondary.ray.*"
# ignore_errors removed — 0 errors in this module

[[tool.mypy.overrides]]
module = [
    "docker",
    "docker.*",
    "yaml",
    "boto3",
    "botocore",
    "botocore.*",
    "aioboto3",
    "lark_oapi",
    "lark_oapi.*",
    "pgvector",
    "pgvector.*",
    "psycopg2",
    "psycopg2.*",
    "networkx",
    "networkx.*",
    "jsonschema",
    "jsonschema.*",
    "grpc",
    "grpc.*",
]
ignore_missing_imports = true

# Internal modules that may not exist in all environments
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.llm.embedding_service",
    "src.infrastructure.adapters.secondary.graphiti.embedding_utils",
]
ignore_missing_imports = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "watchdog>=6.0.0",
]

[tool.uv]

# Disabled aliyun mirror for CI compatibility
# [[tool.uv.index]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# default = true
